--- a/build.gradle
+++ b/build.gradle
@@ -34,5 +34,8 @@ dependencies {
 
 	runtime('com.h2database:h2')
 	compileOnly('org.projectlombok:lombok')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test
+	testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.0.0.RELEASE'
+
+	testCompile('org.springframework:spring-test:5.0.0.RELEASE')
 }
